# dianjixz-lib

./: .gitignore  Kconfig  README.md
bak/hv/: CMakeLists.txt
components/: components.cmake
components/Backward_cpp/: CMakeLists.txt  SConscript
components/Cimg/: CMakeLists.txt  SConscript
components/DeviceDriver/: CMakeLists.txt  SConscript  SConstruct
components/HAL_Driver_Libs/: Kconfig  README.md  SConscript  SConstruct
components/Protothreads/: Kconfig  SConstruct
components/anyany/: CMakeLists.txt  SConscript
components/at_bsp/: Kconfig  SConstruct
components/ax_common_hal/: Kconfig  SConstruct
components/ax_msp/: Kconfig  SConstruct
components/axcl_msp/: Kconfig  SConstruct
components/component1/: CMakeLists.txt  Kconfig  SConscript
components/cppstate/: CMakeLists.txt  SConscript  SConstruct
components/d_hal_api/: Kconfig  SConstruct
components/dtc_component/: Kconfig  SConstruct
components/ev/: Kconfig  SConstruct  config.h
components/eventpp/: CMakeLists.txt  SConscript
components/ffi/: Kconfig  SConstruct
components/framework-portduino/: Kconfig  SConstruct
components/gear_libs/: CMakeLists.txt  SConscript  SConstruct
components/hv/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/iperf3/: Kconfig  SConstruct
components/lua_component/: Kconfig  SConstruct
components/lvgl_component/: CMakeLists.txt  SConscript  SConstruct
components/m5gfx/: CMakeLists.txt
components/mbedtls_component/: Kconfig  SConstruct
components/minicv2/: CMakeLists.txt  SConscript  SConstruct
components/modbus_component/: Kconfig  SConstruct
components/mongoose/: CMakeLists.txt  SConscript
components/nanojpeg/: CMakeLists.txt  SConscript
components/nanolog/: CMakeLists.txt  SConscript
components/nanomsg/: CMakeLists.txt  SConscript
components/nng/: CMakeLists.txt  Kconfig  SConscript  SConstruct  SConstruct.bak
components/simpleini/: CMakeLists.txt  SConscript
components/single_header_libs/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/stb/: CMakeLists.txt  SConscript  SConstruct
components/stm32_bsp/: Kconfig  SConstruct
components/tbox/: CMakeLists.txt  Kconfig
components/tbox/include/: tbox.config.h
components/timercpp/: CMakeLists.txt  SConscript
components/tinyjpeg/: CMakeLists.txt  SConscript
components/toolkit/: CMakeLists.txt  SConscript
components/u8g2_component/: CMakeLists.txt  SConscript
components/utilities/: CMakeLists.txt  Kconfig  SConscript  SConstruct
components/v4l2_component/: SConstruct
conan_components/blend2d/: conandata.yml  conanfile.py
conan_components/libhv/: conandata.yml  conanfile.py
conan_components/libv4l/: conandata.yml  conanfile.py
doc/: README.md  examples_demo1.md
examples/Protothreads_example/: .gdb_history  config_defaults.mk
examples/Turbo-Base64/: config_defaults.mk
examples/at32f415_example/: Sconstruct  config_defaults.mk
examples/at32f415_xieyi/: .gdb_history  Sconstruct  config_defaults.mk  debug.txt
examples/ax650_ec_proxy/: Sconstruct  conanfile.txt  config_defaults.mk
examples/ax650_product/: .gitignore  SConstruct  config_defaults.mk  setup.ini
examples/ax650_sample/: config_defaults.mk
examples/ax650_yolo/: .gdb_history  .gitignore  config_defaults.mk  setup.ini
examples/ax_630c_framebuffer/: config_defaults.mk  setup.ini
examples/ax_lcd_display_init/: SConstruct
examples/ax_yolov8_post_demo/: .gitignore  README.md  config_defaults.mk  setup.ini
examples/ax_yolov8_post_demo_old/: SConstruct  config_defaults.mk  setup.ini
examples/axcl_sample/: SConstruct
examples/axcl_sample_sys/: remote_debug.sh
examples/axcl_sample_vdec/: README.md
examples/axcl_sample_venc/: .gdb_history  config_defaults.mk  setup.ini
examples/axcl_yolo/: README.md  SConstruct  config_defaults.mk
examples/axera_audio/: .gdb_history  config_defaults.mk  remote_debug.sh  run_remote.sh
examples/axera_product_test/: config_defaults.mk  setup.ini
examples/backward_cpp_test/: Makefile
examples/cmm_tool/: config_defaults.mk  setup.ini
examples/conan_example/: conanfile.txt  config_defaults.mk
examples/core135_kit_product_test_ui/: SConstruct  config_defaults.mk  run_remote.sh  setup.ini
examples/core135_llm_product_test_ui/: .gdb_history  chvt.c
examples/core135_start_ui_custom/: SConstruct  setup.ini  stm32mp135_test.dtb
examples/cpu_use/: Sconstruct
examples/d_hal_test/: config_defaults.mk
examples/demo1/: Makefile
examples/dts_auto_config_example/: config_defaults.mk
examples/esp_flasher/: .gitignore  Sconstruct  config_defaults.mk
examples/esp_hosted_fg_tool/: config_defaults.mk
examples/ev_http_server/: config_defaults.mk
examples/ev_tcp_server/: config_defaults.mk
examples/framebuffer/: build_after.sh  config_defaults.mk
examples/gear_lib_log/: config_defaults.mk
examples/hello_world/: config_defaults.mk
examples/iperf3_example/: config_defaults.mk
examples/linux_i2c/: config_defaults.mk
examples/linux_i2c_sh110x/: Makefile  config_defaults.mk
examples/linux_spi/: config_defaults.mk
examples/linux_uart/: Makefile  config_defaults.mk
examples/lt9611_mcu_config/: SConstruct  config_defaults.mk
examples/lvgl_example/: Makefile
examples/m5_650n_pyrimind_stm32g431/: .gdb_history  Sconstruct  config_defaults.mk
examples/m5_ax8850_m2_stm32l011/: Sconstruct  config_defaults.mk
examples/m5gfx_sh1107/: Makefile  config_defaults.mk
examples/mbedtls_demo/: config_defaults.mk
examples/memory_sharing/: Makefile
examples/mongoose_tcp_echo/: Makefile
examples/mp3player/: Makefile
examples/nng_test/: build_after.sh  conanfile.txt  config_defaults.mk
examples/picocom/: config_defaults.mk
examples/portduino/: config_defaults.mk
examples/ptxm_tcp_tran/: Makefile  config_defaults.mk
examples/remote_get_ip/: Makefile
examples/sample_ffmpeg_vdec/: config_defaults.mk
examples/sbc8850_product/: .gitignore  conanfile.txt  setup.ini
github_source/: source-list.sh
other_examples/: daemon.sh  shell_examples.md
tools/: Makefile.mk  corss-toolchina  push.exp  ssh.exp
(+634 files in other folders)
